Cleanup bingo objectives
- Create & use an abstract StatefulInt tracker
- Remove old usages of explicit material reader